refactor: :lipstick: reestilização simples do estilo das páginas

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,9 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/svg+xml" href="../img/favicon.svg" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
-  <script type="module" src="../js/about.js" defer></script>
-  <title>About</title>
+  <link rel="stylesheet" href="../css/inicialESobre.css">
+
+  <!-- JS -->
+  <script type="module" src="../js/controller/construirHeaderFooter.js" defer></script>
+  <script type="module" src="../js/controller/menuHeader.js" defer></script>
+
+  <title>YC - Sobre</title>
 </head>
 
 <body>
@@ -14,12 +24,28 @@
   <header id="header" class="cabecalho"></header>
 
   <main class="prinicipalAbout">
-    <h3>ABOUT</h3>
+    <h2 class="titulo">Sobre</h2>
+    <h3>História</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dignissimos aperiam id, et dolor similique
       quaerat dolores, laboriosam repudiandae, sequi harum iure pariatur nisi quisquam asperiores voluptas voluptatibus
-      recusandae numquam?</p>
+      recusandae numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, perferendis molestiae
+      voluptatem consequatur autem accusamus deleniti earum minus sint dicta, maxime eligendi, reiciendis nisi vitae
+      dolore voluptatum non facere id.
+    </p>
+    <h3>Valores</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptatibus adipisci quidem repudiandae. Rem
       dolorum temporibus itaque sequi dolores harum culpa illo, totam sit quae consectetur eos asperiores iste possimus?
+    </p>
+    <ul>
+      <li>Amor</li>
+      <li>Tempero</li>
+      <li>Coragem</li>
+      <li>Dedicação</li>
+      <li>Força de vontade</li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, tenetur alias! In aliquam beatae magni! Iusto,
+      ratione molestiae perspiciatis voluptate veritatis quod. Rem pariatur ipsam, blanditiis temporibus natus eaque
+      eos?
     </p>
   </main>
 
