--- a/src/html/formAction.html
+++ b/src/html/formAction.html
@@ -4,9 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/svg+xml" href="../img/favicon.svg" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
-  <script type="module" src="../js/formAction.js" defer></script>
-  <title>FormAction</title>
+  <link rel="stylesheet" href="../css/form.css">
+
+  <!-- JS -->
+  <script type="module" src="../js/controller/construirHeaderFooter.js" defer></script>
+  <script type="module" src="../js/controller/menuHeader.js" defer></script>
+
+  <title>YC - Receitas</title>
 </head>
 
 <body>
@@ -14,7 +24,7 @@
   <header id="header" class="cabecalho"></header>
 
   <main>
-    <h3>FORM ACTION</h3>
+    <h2 class="titulo">Receitas</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, autem aut? Saepe sunt esse tempore, ullam,
       optio excepturi, similique voluptatum ipsam harum animi sed repudiandae vitae! Nostrum ipsum quibusdam nam.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit asperiores obcaecati quod doloremque, eius
