--- a/index.html
+++ b/index.html
@@ -4,22 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/svg+xml" href="./src/img/favicon.svg" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="./src/css/style.css">
-  <script type="module" src="./src/js/index.js" defer></script>
-  <title>Inicial</title>
+  <link rel="stylesheet" href="./src/css/inicialESobre.css">
+
+  <!-- JS -->
+
+  <script type="module" src="./src/js/controller/construirHeaderFooter.js" defer></script>
+  <script type="module" src="./src/js/controller/menuHeader.js" defer></script>
+
+
+  <title>YC - Inicial</title>
 </head>
 
 <body>
 
-  <header id="header" class="cabecalho"></header>
+  <header id="headerIndex" class="cabecalho"></header>
 
   <main class="prinicipalIndex">
-    <h3>Bem-vindo a pagina inicial</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, autem aut? Saepe sunt esse tempore, ullam,
-      optio excepturi, similique voluptatum ipsam harum animi sed repudiandae vitae! Nostrum ipsum quibusdam nam.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit asperiores obcaecati quod doloremque, eius
-      cum soluta repellat numquam? Quam alias fugit voluptatum. Illo nostrum facere necessitatibus quas minus veniam
-      reiciendis?</p>
+    <h2 class="titulo">Bem-vindo à YouCook</h2>
+    <h3>Como funciona:</h3>
+    <p>Sabe aquela receita antiga de família, ou uma criação única e inovadora que você gostaria de compartilhar com
+      outras pessoas essa maravilha da culinária, basta nos <a href="./src/html/form.html">enviar a receita</a> que
+      compartilharemos em nosso site, lhe dando crédito e destaque por sua contribuição.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam qui ipsum nam quam tempore obcaecati in odio
+      molestiae accusamus veritatis? Officiis pariatur enim explicabo tempore placeat eum obcaecati cum ducimus. Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptatem consequatur nostrum incidunt. Eligendi,
+      magnam nobis qui velit dolor commodi veniam quisquam illum quae, error, quod architecto eveniet pariatur dolore.
+    </p>
   </main>
 
   <footer id="footer" class="rodape"></footer>
