--- a/src/html/form.html
+++ b/src/html/form.html
@@ -26,17 +26,21 @@
 
   <main class="principalForm">
     <h2 class="titulo">Cadastro de Receita</h2>
-    <form>
+    <form method="GET" action="./formAction.html">
 
       <h3 class="titulosForm">Informações</h3>
       <fieldset class="fieldsetInformacoes">
         <label for="tituloReceita">
           Título da Receita
-          <input type="text" name="tituloReceita" placeholder="Digite aqui..." required>
+          <input type="text" name="tituloReceita" id="tituloReceita" placeholder="Digite aqui..."
+            pattern="[a-zA-ZÀ-ÿ0-9 ]+" title="Sem caracteres especias, insira apenas letras, números, espaços e acentos"
+            required>
         </label>
         <label for="autorReceita">
           Autor da Receita
-          <input type="text" name="autorReceita" placeholder="Digite aqui..." required>
+          <input type="text" name="autorReceita" id="autorReceita" placeholder="Digite aqui..."
+            pattern="[a-zA-ZÀ-ÿ0-9 ]+" title="Sem caracteres especias, insira apenas letras, números, espaços e acentos"
+            required>
         </label>
       </fieldset>
 
@@ -54,25 +58,30 @@
       </fieldset>
 
       <h3 class="titulosForm">Ingredientes</h3>
-      <fieldset class="fieldsetInteiro">
+      <fieldset class="fieldsetLista">
         <label for="ingredientes" id='labelIngredientes'>
-          <input type="text" name="ingrediente1" id="ingrediente1" placeholder="Ingrediente 1..." required>
+          <input type="text" name="ingrediente1" id="ingrediente1" placeholder="Ingrediente 1..."
+            pattern="[a-zA-ZÀ-ÿ0-9 ]+" title="Sem caracteres especias, insira apenas letras, números, espaços e acentos"
+            required>
         </label>
-        <button type="button" onclick="addInputIngredientes()">+</button>
+        <button type="button" onclick="addInputIngredientes()">Adicionar mais um ingrediente</button>
       </fieldset>
 
       <h3 class="titulosForm">Modo de Fazer</h3>
-      <fieldset class="fieldsetInteiro">
+      <fieldset class="fieldsetLista">
         <label for="modoFazer" id='labelModoFazer'>
-          <input type="text" name="passo1" id="passo1" placeholder="Passo 1..." required>
+          <input type="text" name="passoModoFazer1" id="passoModoFazer1" placeholder="Passo 1..."
+            pattern="[a-zA-ZÀ-ÿ0-9 ]+" title="Sem caracteres especias, insira apenas letras, números, espaços e acentos"
+            required>
         </label>
-        <button type="button" onclick="addInputModoFazer()">+</button>
+        <button type="button" onclick="addInputModoFazer()">Adicionar mais uma instrução</button>
       </fieldset>
 
       <fieldset class="fieldsetBotoes">
-        <button type="reset" class="botaoLimpar">Limpar</button>
+        <button type="button" class="botaoLimpar" onclick="location.reload()">Limpar</button>
         <button type="submit" class="botaoSalvar">Salvar</button>
       </fieldset>
+
     </form>
   </main>
 
