feat: :sparkles: criação da logica e estilo do FormAction

--- a/src/html/formAction.html
+++ b/src/html/formAction.html
@@ -10,11 +10,12 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/form.css">
+  <link rel="stylesheet" href="../css/formAction.css">
 
   <!-- JS -->
   <script type="module" src="../js/controller/construirHeaderFooter.js" defer></script>
   <script type="module" src="../js/controller/menuHeader.js" defer></script>
+  <script type="text/javascript" src="../js/controller/funcoesFormAction.js" defer></script>
 
   <title>YC - Receitas</title>
 </head>
@@ -25,11 +26,7 @@
 
   <main>
     <h2 class="titulo">Receitas</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, autem aut? Saepe sunt esse tempore, ullam,
-      optio excepturi, similique voluptatum ipsam harum animi sed repudiandae vitae! Nostrum ipsum quibusdam nam.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit asperiores obcaecati quod doloremque, eius
-      cum soluta repellat numquam? Quam alias fugit voluptatum. Illo nostrum facere necessitatibus quas minus veniam
-      reiciendis?</p>
+    <section class="containerReceitas" id="containerReceitas"></section>
   </main>
 
   <footer id="footer" class="rodape"></footer>
