fix: :fire: remoção do pattern nos modos de fazer e reestilização de button

--- a/src/html/form.html
+++ b/src/html/form.html
@@ -70,16 +70,14 @@
       <h3 class="titulosForm">Modo de Fazer</h3>
       <fieldset class="fieldsetLista">
         <label for="modoFazer" id='labelModoFazer'>
-          <input type="text" name="passoModoFazer1" id="passoModoFazer1" placeholder="Passo 1..."
-            pattern="[a-zA-ZÀ-ÿ0-9 ]+" title="Sem caracteres especias, insira apenas letras, números, espaços e acentos"
-            required>
+          <input type="text" name="passoModoFazer1" id="passoModoFazer1" placeholder="Passo 1..." required>
         </label>
         <button type="button" onclick="addInputModoFazer()">Adicionar mais uma instrução</button>
       </fieldset>
 
       <fieldset class="fieldsetBotoes">
-        <button type="button" class="botaoLimpar" onclick="location.reload()">Limpar</button>
-        <button type="submit" class="botaoSalvar">Salvar</button>
+        <button type="button" class="botaoLimpar" onclick="location.reload()">LIMPAR</button>
+        <button type="submit" class="botaoSalvar">SALVAR</button>
       </fieldset>
 
     </form>
