feat: :lipstick: adição de banner e conteudo na Inicial e Sobre

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <script type="module" src="./src/js/controller/construirHeaderFooter.js" defer></script>
   <script type="module" src="./src/js/controller/menuHeader.js" defer></script>
 
-
   <title>YC - Inicial</title>
 </head>
 
@@ -27,16 +26,17 @@
 
   <main class="prinicipalIndex">
     <h2 class="titulo">Bem-vindo à YouCook</h2>
-    <h3>Como funciona:</h3>
     <p>Sabe aquela receita antiga de família, ou uma criação única e inovadora que você gostaria de compartilhar com
       outras pessoas essa maravilha da culinária, basta nos <a href="./src/html/form.html">enviar a receita</a> que
-      compartilharemos em nosso site, lhe dando crédito e destaque por sua contribuição.
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam qui ipsum nam quam tempore obcaecati in odio
-      molestiae accusamus veritatis? Officiis pariatur enim explicabo tempore placeat eum obcaecati cum ducimus. Lorem
-      ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptatem consequatur nostrum incidunt. Eligendi,
-      magnam nobis qui velit dolor commodi veniam quisquam illum quae, error, quod architecto eveniet pariatur dolore.
-    </p>
+      compartilharemos em nosso site, lhe dando crédito e destaque por sua contribuição.</p>
+    <p>Na <b>YouCook</b>, acreditamos na construção de uma comunidade de entusiastas da culinária. Participe
+      das conversas, compartilhe suas experiências e inspire-se em outros membros da nossa comunidade. A culinária é uma
+      jornada que fica ainda melhor quando compartilhada.</p>
+    <p>Estamos felizes por você estar aqui e esperamos que você desfrute de todas as delícias que a YouCook tem a
+      oferecer. Junte-se a nós e comece a compartilhar, explorar e cozinhar hoje!</p>
+    <p>Além de compartilhar suas receitas, você pode explorar uma variedade de pratos deliciosos em nosso site. Nossas
+      receitas são cuidadosamente elaboradas e acompanhadas de instruções detalhadas para que você possa reproduzi-las
+      com facilidade em sua própria cozinha.</p>
   </main>
 
   <footer id="footer" class="rodape"></footer>
