--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,28 +25,63 @@
 
   <main class="prinicipalAbout">
     <h2 class="titulo">Sobre</h2>
-    <h3>História</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dignissimos aperiam id, et dolor similique
-      quaerat dolores, laboriosam repudiandae, sequi harum iure pariatur nisi quisquam asperiores voluptas voluptatibus
-      recusandae numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, perferendis molestiae
-      voluptatem consequatur autem accusamus deleniti earum minus sint dicta, maxime eligendi, reiciendis nisi vitae
-      dolore voluptatum non facere id.
+
+    <h3>Sobre nós</h3>
+    <p>No YouCook, você encontrará uma ampla variedade de receitas, desde pratos tradicionais até inovações
+      culinárias. Nossas receitas são cuidadosamente elaboradas, testadas e acompanhadas de instruções passo a passo
+      para tornar a culinária mais acessível e divertida. Além de receitas deliciosas, também fornecemos dicas úteis,
+      truques de cozinha e informações sobre ingredientes para ajudá-lo a aprimorar suas habilidades culinárias.
+      Acreditamos que a aprendizagem é uma jornada constante, e estamos aqui para acompanhá-lo em cada passo do caminho.
     </p>
+
+    <h3>Missão</h3>
+    <p>Somos apaixonados por compartilhar e celebrar o maravilhoso mundo da culinária. Nossa missão é
+      inspirar e ajudar pessoas a descobrirem a alegria da preparação de pratos deliciosos, desde receitas caseiras
+      reconfortantes até criações gourmet deslumbrantes. Somos uma comunidade de entusiastas da culinária que acreditam
+      que a cozinha é uma forma de arte e uma expressão de amor. Acreditamos que todos podem aprender a cozinhar e criar
+      pratos incríveis, independentemente de sua experiência prévia na cozinha.
+    </p>
+    
     <h3>Valores</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptatibus adipisci quidem repudiandae. Rem
-      dolorum temporibus itaque sequi dolores harum culpa illo, totam sit quae consectetur eos asperiores iste possimus?
-    </p>
-    <ul>
-      <li>Amor</li>
-      <li>Tempero</li>
-      <li>Coragem</li>
-      <li>Dedicação</li>
-      <li>Força de vontade</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, tenetur alias! In aliquam beatae magni! Iusto,
-      ratione molestiae perspiciatis voluptate veritatis quod. Rem pariatur ipsam, blanditiis temporibus natus eaque
-      eos?
-    </p>
+    <p>Nossos valores são a base de tudo o que fazemos. Acreditamos firmemente em:</p>
+    <ol>
+      <li>
+        <h4>Paixão pela Culinária</h4>
+        <p>Acreditamos que a preparação de alimentos é uma forma de arte e uma
+          expressão de amor. Nossa paixão pela culinária nos motiva a compartilhar receitas incríveis e inspirar outras
+          pessoas a explorar o mundo da comida.</p>
+      </li>
+
+      <li>
+        <h4>Acessibilidade</h4>
+        <p>Queremos que a culinária seja acessível a todos. Nossas receitas vêm com instruções detalhadas, dicas úteis e
+          truques de cozinha, para que todos, independentemente de sua experiência na cozinha, possam se sentir
+          confiantes ao cozinhar nossos pratos.</p>
+      </li>
+
+      <li>
+        <h4>Qualidade e Sabor</h4>
+        <p>A qualidade é fundamental para nós. Cada receita que compartilhamos é cuidadosamente elaborada e testada para
+          garantir que seja deliciosa. Acreditamos que a boa comida é uma alegria que todos merecem experimentar.</p>
+      </li>
+
+      <li>
+        <h4>Comunidade</h4>
+        <p>Valorizamos a comunidade que construímos ao redor da culinária. Estamos comprometidos em criar um ambiente
+          acolhedor onde entusiastas da culinária possam compartilhar experiências, ideias e receitas. Acreditamos que a
+          culinária é uma jornada que fica ainda melhor quando compartilhada.</p>
+      </li>
+
+      <li>
+        <h4>Aprendizagem Contínua</h4>
+        <p>Acreditamos que a culinária é uma jornada de aprendizado contínuo. Sempre estamos em busca de novas técnicas,
+          sabores e inspirações. Encorajamos nossos membros e visitantes a se aventurarem e experimentarem coisas novas
+          na cozinha.</p>
+      </li>
+    </ol>
+
+    <p>Obrigado por visitar o YouCook. Bon appétit!</p>
+
   </main>
 
   <footer id="footer" class="rodape"></footer>
