refactor: :zap: alteração do conteúdo da pagina Sobre

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,60 +25,55 @@
 
   <main class="prinicipalAbout">
     <h2 class="titulo">Sobre</h2>
+    <p class="quote"><i>" Somos apaixonados por compartilhar e celebrar o maravilhoso mundo da culinária. "</i></p>
+    <p class="quote"><i>" Nossa missão é inspirar e ajudar pessoas a descobrirem a alegria da preparação de pratos
+        deliciosos, desde receitas caseiras reconfortantes até criações gourmet deslumbrantes. "</i></p>
+    <p class="quote"><i>" Acreditamos que todos podem aprender a cozinhar e criar pratos incríveis, independentemente de
+        sua experiência prévia na cozinha. "</i></p>
 
-    <h3>Sobre nós</h3>
-    <p>No YouCook, você encontrará uma ampla variedade de receitas, desde pratos tradicionais até inovações
-      culinárias. Nossas receitas são cuidadosamente elaboradas, testadas e acompanhadas de instruções passo a passo
-      para tornar a culinária mais acessível e divertida. Além de receitas deliciosas, também fornecemos dicas úteis,
-      truques de cozinha e informações sobre ingredientes para ajudá-lo a aprimorar suas habilidades culinárias.
-      Acreditamos que a aprendizagem é uma jornada constante, e estamos aqui para acompanhá-lo em cada passo do caminho.
-    </p>
+    <h3>Autora</h3>
+    <p>Juliane Bueno</p>
 
-    <h3>Missão</h3>
-    <p>Somos apaixonados por compartilhar e celebrar o maravilhoso mundo da culinária. Nossa missão é
-      inspirar e ajudar pessoas a descobrirem a alegria da preparação de pratos deliciosos, desde receitas caseiras
-      reconfortantes até criações gourmet deslumbrantes. Somos uma comunidade de entusiastas da culinária que acreditam
-      que a cozinha é uma forma de arte e uma expressão de amor. Acreditamos que todos podem aprender a cozinhar e criar
-      pratos incríveis, independentemente de sua experiência prévia na cozinha.
-    </p>
-    
-    <h3>Valores</h3>
-    <p>Nossos valores são a base de tudo o que fazemos. Acreditamos firmemente em:</p>
-    <ol>
+    <h3>Resultados</h3>
+    <p>A ideia do projeto seria um ambiente pra enviar receitas para uma editora, ou programa de tv, que compartilharia
+      essas receitas com sua audiência.</p>
+    <ul>
       <li>
-        <h4>Paixão pela Culinária</h4>
-        <p>Acreditamos que a preparação de alimentos é uma forma de arte e uma
-          expressão de amor. Nossa paixão pela culinária nos motiva a compartilhar receitas incríveis e inspirar outras
-          pessoas a explorar o mundo da comida.</p>
+        <h4>Pagina Inicial</h4>
+        <p>Primeira página contém uma breve apresentação do site, explicando o seu objetivo e como usar.</p>
+        <p>Foi utilizado um banner para chamar a atenção dos visitantes, junto com o nome da empresa fictícia.</p>
+        <h2 class="titulo tituloExemplo">Bem-vindo à YouCook</h2>
       </li>
 
       <li>
-        <h4>Acessibilidade</h4>
-        <p>Queremos que a culinária seja acessível a todos. Nossas receitas vêm com instruções detalhadas, dicas úteis e
-          truques de cozinha, para que todos, independentemente de sua experiência na cozinha, possam se sentir
-          confiantes ao cozinhar nossos pratos.</p>
+        <h4>Menu</h4>
+        <p>A navegação do site se encontra no header, sendo responsivo e colapsando em telas menores que tablets.</p>
+        <p>Possui os links para as 4 páginas desenvolvidas, tendo a logo tambem como link para a Inicial.</p>
       </li>
 
       <li>
-        <h4>Qualidade e Sabor</h4>
-        <p>A qualidade é fundamental para nós. Cada receita que compartilhamos é cuidadosamente elaborada e testada para
-          garantir que seja deliciosa. Acreditamos que a boa comida é uma alegria que todos merecem experimentar.</p>
+        <h4>Cadastro</h4>
+        <p>Foi considerado os dados mais necessários para uma receita, como nome, autor, tempo de preparo e quantidade
+          de porções que rende.</p>
+        <p>Para os ingredientes e modo de fazer, foi criado um botão para adicionar mais um campo caso precise, afinal
+          esses dados variam conforme a receita.</p>
+        <p>Para cada campo/input foi adicionado verificações de caracteres e todos são obrigatórios.</p>
+        <p>No fim do formulário há dois botões, um para limpar todos os inputs e outro para enviar os dados, que só
+          funcionará se os campos tiverem de acordo com os requisitos.</p>
       </li>
 
       <li>
-        <h4>Comunidade</h4>
-        <p>Valorizamos a comunidade que construímos ao redor da culinária. Estamos comprometidos em criar um ambiente
-          acolhedor onde entusiastas da culinária possam compartilhar experiências, ideias e receitas. Acreditamos que a
-          culinária é uma jornada que fica ainda melhor quando compartilhada.</p>
+        <h4>Receitas</h4>
+        <p>A receita envida no cadastro é apresentada nessa página, organizando os dados para fácil leitura.</p>
+        <p>Foi utilizado bordas para separar os conteúdos.</p>
       </li>
 
       <li>
-        <h4>Aprendizagem Contínua</h4>
-        <p>Acreditamos que a culinária é uma jornada de aprendizado contínuo. Sempre estamos em busca de novas técnicas,
-          sabores e inspirações. Encorajamos nossos membros e visitantes a se aventurarem e experimentarem coisas novas
-          na cozinha.</p>
+        <h4>Sobre</h4>
+        <p>Conforme interpretação do enunciado, a página Sobre contém informações sobre o site, tendo a apresentação do
+          trabalho, o autor e evidências no tratamentos do elementos.</p>
       </li>
-    </ol>
+    </ul>
 
     <p>Obrigado por visitar o YouCook. Bon appétit!</p>
 
