fix: :bug: reestruturação do header

--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
   <link rel="stylesheet" href="./src/css/inicialESobre.css">
 
   <!-- JS -->
-
-  <script type="module" src="./src/js/controller/construirHeaderFooter.js" defer></script>
-  <script type="module" src="./src/js/controller/menuHeader.js" defer></script>
+  <script src="./src/js/menuHeader.js" defer></script>
 
   <title>YC - Inicial</title>
 </head>
 
 <body>
 
-  <header id="headerIndex" class="cabecalho"></header>
+  <header id="headerIndex" class="cabecalho">
+    <div class="containerHeader">
+      <a href="./index.html"><img src="./src/img/logo.svg" alt="logo"></a>
+      <nav class="main-nav">
+        <ul class="menu">
+          <li class="close">&times;</li>
+          <li><a href="./index.html">Inicial</a></li>
+          <li><a href="./src/html/form.html">Cadastro</a></li>
+          <li><a href="./src/html/formAction.html">Receitas</a></li>
+          <li><a href="./src/html/about.html">Sobre</a></li>
+        </ul>
+        <span class="mobile-btn">Menu</span>
+        <div class="overlay"></div>
+      </nav>
+    </div>
+  </header>
 
   <main class="prinicipalIndex">
     <h2 class="titulo">Bem-vindo à YouCook</h2>
@@ -39,7 +52,10 @@
       com facilidade em sua própria cozinha.</p>
   </main>
 
-  <footer id="footer" class="rodape"></footer>
+  <footer id="footer" class="rodape">
+    <small>Feito por Juliane Bueno</small>
+    <small>&copy; Todos os Direitos Reservados</small>
+  </footer>
 
 </body>
 
